<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>libphidget21</name>
  <version>0.7.2</version>
  <description>This package wraps the libphidget21 to use it as a ROS dependency</description>

  <maintainer email="martin.guenther@dfki.de">Martin Guenther</maintainer>
  <maintainer email="muhrix@gmail.com">Murilo FM</maintainer>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/libphidget21</url>
  <url type="repository">https://github.com/ros-drivers/phidgets_drivers.git</url>
  <url type="bugtracker">https://github.com/ros-drivers/phidgets_drivers/issues</url>

  <author>Alexander Bubeck</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libusb-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
