<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>phidgets_drivers</name>
  <version>0.7.2</version>
  <description>API and ROS drivers for Phidgets devices</description>

  <maintainer email="martin.guenther@dfki.de">Martin Guenther</maintainer>
  <maintainer email="muhrix@gmail.com">Murilo FM</maintainer>

  <license>BSD, LGPL</license>

  <url type="website">http://ros.org/wiki/phidgets_drivers</url>
  <url type="repository">https://github.com/ros-drivers/phidgets_drivers.git</url>
  <url type="bugtracker">https://github.com/ros-drivers/phidgets_drivers/issues</url>

  <author>Phidgets Inc.</author>
  <author>Tully Foote</author>
  <author>Ivan Dryanovski</author>
  <author>Martin Guenther</author>
  <author>Murilo FM</author>

  <buildtool_depend>ament</buildtool_depend>
  <exec_depend>phidgets_api</exec_depend>
  <exec_depend>phidgets_imu</exec_depend>
  <exec_depend>libphidget21</exec_depend>

  <export>
    <metapackage />
    <build_type>ament_cmake</build_type>
  </export>
</package>
