<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>phidgets_imu</name>
  <version>0.7.2</version>
  <description>Driver for the Phidgets Spatial 3/3/3 devices</description>

  <maintainer email="martin.guenther@dfki.de">Martin Guenther</maintainer>
  <maintainer email="muhrix@gmail.com">Murilo FM</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/phidgets_imu</url>
  <url type="repository">https://github.com/ros-drivers/phidgets_drivers.git</url>
  <url type="bugtracker">https://github.com/ros-drivers/phidgets_drivers/issues</url>

  <author email="ccnyroboticslab@gmail.com">Ivan Dryanovski</author>

  <buildtool_depend>ament</buildtool_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>phidgets_api</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>ros2_time</build_depend>

  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>phidgets_api</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>ros2_time</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
